Updated the home page
The (broken) link to the 2015-version of the website is removed.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<p><em>Abacles</em> (n.): a word I invented to refer to the beads on an <a href="https://en.wikipedia.org/wiki/Abacus" target="_blank">abacus</a>, the calculating tool. To pronounce this word, combine "<b>a</b>pple", "<b>ba</b>ton", and "ici<b>cles</b>."</p>
       </div>
 
-      <p>This website is currently home to the <a href="pcprog/index.html">Panther Creek Programming Team</a>. You can also find a handy <a href="tools/ascii.html">ASCII table</a>, and a <a href="tools/pinyin.html">tool that labels pinyin for Chinese ebooks</a>. The ancient (and bad) 2015-version of this website is <a href="old/index.html">here</a>.</p>
+      <p>This website is currently home to the <a href="pcprog/index.html">Panther Creek Programming Team</a>. You can also find a handy <a href="tools/ascii.html">ASCII table</a>, and a <a href="tools/pinyin.html">tool that labels pinyin for Chinese ebooks</a>.</p>
 
       <!-- BOF -->
 
