Created the "Inputs and If Statements" page
Added the tutorial page on inputs and if statements, and also updated the CSS (and the first page) to include page flip buttons.

--- a/python/intro.html
+++ b/python/intro.html
@@ -198,6 +198,12 @@ print(c * c)</pre>
 	Create a variable <code>y = 12</code>. Observe the behavior of <code>print(y + ' donuts')</code> and <code>print(str(y) + ' donuts')</code>.<br />
 	Create a variable <code>celsius</code> and assign 26 to it. Make another variable <code>fahrenheit</code> to be equal to the corresponding converted temperature (using <code>celsius</code>). Print out both. Now, by changing <code>celsius</code>, you should be able to see the equivalent Fahrenheit temperature.</p>
     </div>
+
+    <div class="pageflip">
+      <!--<a>&lt;--</a>-->
+      <a>#</a>
+      <a href="if.html">--&gt;</a>
+    </div>
      
   </body>
 
