--- a/python/intro.html
+++ b/python/intro.html
@@ -110,15 +110,15 @@ You can do math with Python using +, -, *, and /
     <p>Math with decimals can be slightly off due to inherent limits in how the computer stores numbers, but this generally won't be a big issue.</p>
 
     <pre class="code">
-# This line is a comment. It's ignored by Python.
+<span class="light"># This line is a comment. It's ignored by Python.
 # <- Comments start with the number sign
-# Comments are useful as notes so that you can remember what a piece of code does
+# Comments are useful as notes so that you can remember what a piece of code does</span>
 
-print('***** fancy text *****') # comments can start here too
+print('***** fancy text *****') <span class="light"># comments can start here too</span>
 
-# you can add (combine) two strings together
+<span class="light"># you can add (combine) two strings together</span>
 print('water' + 'melon')
-# or repeat a string multiple times
+<span class="light"># or repeat a string multiple times</span>
 print(':)' * 5)
 print('wo' * 3 + 'w')</pre>
      <pre class="out">
@@ -148,7 +148,7 @@ wowowow</pre>
     <p>You can tell Python to store some values that you may want to use for later with variables. A variable is like a storage box in the computer memory in which you can put things, including strings and numbers. You can change the value of the variable over time as necessary.</p>
 
     <pre class="code">
-# year is a variable, and we're assigning the value 2020 to it
+<span class="light"># year is a variable, and we're assigning the value 2020 to it</span>
 year = 2020
 print(year)</pre>
     <pre class="out">2020</pre>
