Created the "Lists" page
Added the tutorial page on loops and updated the link in the previous page (loops).

--- a/python/loops.html
+++ b/python/loops.html
@@ -295,7 +295,7 @@ print(sum_evens)</pre>
     <div class="pageflip">
       <a href="if.html">&lt;--</a>
       <a>#</a>
-      <a>--&gt;</a>
+      <a href="lists.html">--&gt;</a>
     </div>
 
   </body>
