Add link to new pcprog website
Linked to Andrew's new website.

--- a/pcprog/comps.html
+++ b/pcprog/comps.html
@@ -56,6 +56,11 @@
 	</div>
 
       </div>
+
+      <div class="notification">
+	<h3>New website:</h3>
+	<p>This website is no longer updated, please go to <a href="https://pchs-programming-club.github.io/pcprog/">https://pchs-programming-club.github.io/pcprog/</a> instead.</p>
+      </div>
       
       <h1><span class="hsub">CompSci</span><br />Competitions</h1>
 
