--- a/pcprog/index.html
+++ b/pcprog/index.html
@@ -57,10 +57,10 @@
 
       </div>
 
-      <!--div class="notification">
-	<h3>Next Workshop:</h3>
-	<p>We will host our first workshop on Friday, Oct. 19 (B half) in room 2611. We will help you get familiar with the format of programming contests with some easy problems.</p>
-      </div-->
+      <div class="notification">
+	<h3>New website:</h3>
+	<p>This website is no longer updated, please go to <a href="https://pchs-programming-club.github.io/pcprog/">https://pchs-programming-club.github.io/pcprog/</a> instead.</p>
+      </div>
       
       <h1><span class="hsub">PCHS</span><br />Programming Team</h1>
 
