--- a/pcprog/rtpprogcomp.html
+++ b/pcprog/rtpprogcomp.html
@@ -63,6 +63,11 @@
         <p>Please register for your team <a href="https://www.eventbrite.com/e/2019-fall-rtp-high-school-programming-competition-tickets-79889376275" target="_blank">here</a>.</p>
       </div>
       -->
+
+      <div class="notification">
+	<h3>New website:</h3>
+	<p>This website is no longer updated, please go to <a href="https://pchs-programming-club.github.io/pcprog/">https://pchs-programming-club.github.io/pcprog/</a> instead.</p>
+      </div>
       
       <h1><span class="hsub">RTP</span><br />High School Programming Competition</h1>
 
